--- a/src/assets/scss/components/header/_notification.scss
+++ b/src/assets/scss/components/header/_notification.scss
@@ -22,6 +22,15 @@
       top: 100% !important;
       transform: none !important;
       overflow: auto;
+      scrollbar-width: none;
+      -ms-overflow-style: -ms-autohiding-scrollbar;
+      -webkit-overflow-scrolling: touch;
+      overflow-scrolling: touch;
+      overscroll-behavior: none contain;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
       @include media-breakpoint-down(sm){
         width: calc(100vw - 30px);
@@ -41,7 +50,6 @@
         color: $blue;
         border-top: 1px solid rgba($white, .6);
         transform: translate(0, .5rem);
-        margin-bottom: -.5rem;
         background: lighten($dropdown-link-color, 40%);
         border-bottom-left-radius: $border-radius;
         border-bottom-right-radius: $border-radius;
