--- a/src/assets/scss/sections/_tile-list.scss
+++ b/src/assets/scss/sections/_tile-list.scss
@@ -71,7 +71,10 @@
     color: $white;
     padding: 65px 30px 30px;
     height: 100%;
+    flex: 1;
     display: flex;
+    flex-grow: 0;
+    flex-shrink: inherit;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
