--- a/src/assets/scss/components/header/_user.scss
+++ b/src/assets/scss/components/header/_user.scss
@@ -18,6 +18,7 @@
     height: $header-height;
     @include font-size($header-font-size);
     white-space: nowrap;
+    user-select: none;
 
     &:hover {
       .icon-arrow {
