--- a/src/assets/scss/components/_chart.scss
+++ b/src/assets/scss/components/_chart.scss
@@ -5,6 +5,10 @@
   position: absolute;
   @extend .fs;
 
+  @include media-breakpoint-down(sm){
+    padding: 10px 0 0 10px;
+  }
+
   &-wrapper {
     position: relative;
     width: 100%;
@@ -23,34 +27,35 @@
     .label {
       position: absolute;
       left: 50%;
-      top: -10px;
+      top: -18px;
       margin-left: -5%;
 
       @include media-breakpoint-down(sm) {
-        @include font-size(14);
+        @include font-size(13);
+        top: -12px;
       }
 
       &-x {
         position: absolute;
-        left: -15px;
+        left: -20px;
         bottom: 6px;
 
         @include media-breakpoint-down(sm) {
           @include font-size(13);
-          left: -7px;
-          bottom: 9px;
+          left: 0;
+          bottom: 4px;
         }
       }
 
       &-y {
         position: absolute;
-        left: -15px;
-        top: -15px;
+        left: -20px;
+        top: -18px;
 
         @include media-breakpoint-down(sm) {
           @include font-size(13);
-          left: -7px;
-          top: -18px;
+          left: 0;
+          top: -12px;
         }
       }
     }
