--- a/src/assets/scss/components/_content.scss
+++ b/src/assets/scss/components/_content.scss
@@ -121,7 +121,7 @@ ul {
           opacity: .5;
 
           @include media-breakpoint-down(md) {
-            width: 35vh;
+            width: 32.3vw;
           }
 
           @include media-breakpoint-down(sm) {
