--- a/src/assets/scss/components/_navigation.scss
+++ b/src/assets/scss/components/_navigation.scss
@@ -10,12 +10,13 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
   bottom: 0;
   z-index: $zindex-fixed;
   color: $content-text-color;
-  background: $navigation-background;
+  background: $header-background;
   box-shadow: 0 8px 17px 0 rgba(#173b77, .09);
   min-width: 300px;
+  width: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  padding: 10px 0;
+  padding: 0;
   scrollbar-width: none;
   overscroll-behavior: contain;
   -webkit-overflow-scrolling: touch;
@@ -26,6 +27,12 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
 
   @include media-breakpoint-down(sm) {
     padding-top: 0;
+    min-width: 270px;
+  }
+
+  & > *:not(.peek){
+    position: relative;
+    z-index: 2;
   }
 
   &::-webkit-scrollbar {
@@ -94,7 +101,7 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
     width: 20px;
     height: auto;
     cursor: pointer;
-    z-index: $zindex-dropdown;
+    z-index: $zindex-dropdown !important;
     @include clickable-area();
     transform: scale(0);
     transition: .2s transform cubic-bezier(.5, -0.5, .5, 1);
@@ -147,12 +154,13 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
       padding: 10px 0;
       margin: 0;
       position: relative;
+      background: $navigation-background;
 
       &:first-of-type {
-        padding-top: 7px;
+        padding-top: 27px;
 
         @include media-breakpoint-down(sm) {
-          margin-top: 60px;
+          margin-top: 50px;
         }
       }
 
@@ -166,6 +174,8 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
       }
 
       &:last-of-type {
+        padding-bottom: 20px;
+
         &:after {
           display: none;
         }
@@ -176,7 +186,6 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
         margin: 0 0 10px 0;
         position: relative;
         padding: 0 42px;
-        background: $navigation-background;
 
         span {
           opacity: .5;
@@ -328,7 +337,7 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
   .user-dropdown {
     background: $header-background;
     margin-top: -50px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     position: relative;
     width: 100%;
     left: 0;
@@ -337,7 +346,8 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
 
     .user-link {
       height: 50px;
-      padding-left: 40px;
+      padding-left: 28px;
+      font-size: 1rem;
 
       & + .collapse,
       & + .collapsing {
@@ -347,9 +357,18 @@ $gradient-navigation-green: linear-gradient(53deg, #26b342, #81d239);
       }
 
       img {
-        width: 32px;
-        height: 32px;
+        width: 36px;
+        height: 36px;
         box-shadow: 0 6px 9px 0 rgba(19, 60, 152, 0.61);
+
+        @include media-breakpoint-down(sm) {
+          margin-right: 12px;
+        }
+      }
+
+      .icon-arrow{
+        font-size: 1.25rem;
+        margin-left: 10px;
       }
     }
 
