--- a/src/assets/scss/components/footer/_copyright.scss
+++ b/src/assets/scss/components/footer/_copyright.scss
@@ -8,6 +8,15 @@
   margin-top: 84px;
   user-select: none;
 
+
+  @include media-breakpoint-down(lg){
+    margin-top: 50px;
+  }
+
+  @include media-breakpoint-down(md){
+    margin-top: 30px;
+  }
+
   &:before {
     content: '';
     height: 0;
