--- a/src/assets/scss/sections/_about.scss
+++ b/src/assets/scss/sections/_about.scss
@@ -71,11 +71,12 @@
   .screen {
     position: absolute;
     z-index: 2;
-    background: #f00;
+    background: $white;
 
     &:after {
       content: '';
       position: relative;
+      display: block;
       width: 100%;
     }
 
@@ -84,7 +85,7 @@
       object-fit: cover;
       object-position: center;
       width: 100%;
-      height: auto;
+      height: 100%;
     }
   }
 
