--- a/src/assets/scss/sections/_tile-list.scss
+++ b/src/assets/scss/sections/_tile-list.scss
@@ -2,6 +2,28 @@
   width: 33.3333%;
   padding: 0 20px;
   margin: 0 0 40px 0;
+  position: relative;
+
+  &:nth-child(1){
+    z-index: 2;
+  }
+
+  &:nth-child(2){
+    z-index: 3;
+  }
+
+  &:nth-child(3){
+    z-index: 4;
+  }
+
+  &:nth-child(4){
+    z-index: 5;
+  }
+
+  &:nth-child(5){
+    z-index: 6;
+  }
+
 
   @include media-breakpoint-down(md) {
     width: 50%;
@@ -9,7 +31,7 @@
 
   @include media-breakpoint-down(sm) {
     width: 100%;
-    padding: 0 10px;
+    padding: 0 15px;
     margin: 0 0 15px 0;
   }
 
@@ -18,7 +40,7 @@
     margin: 0 -20px;
 
     @include media-breakpoint-down(sm) {
-      margin: 0 -10px;
+      margin: 0 -15px;
     }
   }
 
@@ -36,7 +58,7 @@
       padding: 30px 30px 30px 50px;
 
       @include media-breakpoint-down(sm) {
-        padding: 10px;
+        padding: 15px;
       }
     }
 
@@ -57,7 +79,14 @@
     flex-wrap: wrap;
 
     @include media-breakpoint-down(sm) {
-      padding: 0 15px;
+    }
+
+    .container{
+      padding: 0 20px;
+
+      @include media-breakpoint-down(sm) {
+        padding: 0 15px;
+      }
     }
   }
 
@@ -69,7 +98,7 @@
   &-card {
     border-radius: $border-radius;
     color: $white;
-    padding: 65px 30px 30px;
+    padding: 60px 30px 30px;
     height: 100%;
     flex: 1;
     display: flex;
@@ -80,7 +109,7 @@
     justify-content: space-between;
 
     @include media-breakpoint-down(sm) {
-      padding: 35px 15px 30px;
+      padding: 30px 20px;
     }
 
     p {
@@ -163,7 +192,7 @@
     }
 
     .circle {
-      margin: 0 5px 25px;
+      margin: 5px 5px 25px;
     }
   }
 
