--- a/src/assets/scss/components/header/_notification.scss
+++ b/src/assets/scss/components/header/_notification.scss
@@ -122,6 +122,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        opacity: 0;
         will-change: transform, opacity;
       }
     }
